<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.QuestionsActivity"
    style="@style/background_style">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first"
            android:textSize="50sp"
            android:background="@android:color/holo_blue_dark"
            android:padding="8dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="50sp"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:layout_gravity="center"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second"
            android:textSize="50sp"
            android:background="@android:color/holo_blue_dark"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:layout_gravity="center"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_alignParentBottom="true"
    android:layout_margin="30dp">
    <Button
        android:id="@+id/startStopButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginRight="15dp"
        android:onClick="startStopGame"/>
    <Button
        android:id="@+id/getResultButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_dark"
        android:layout_marginLeft="15dp"
        android:enabled="false"/>
</LinearLayout>
</RelativeLayout>